fixed spacing

--- a/client/src/components/LearnMore/style.css
+++ b/client/src/components/LearnMore/style.css
@@ -6,17 +6,17 @@
   width: 100%;
   background-color: rgb(247,231,229);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-direction: column;
   line-height: 1.5;
 }
 
 #headTitle {
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 #seeInfo {
-  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 a {
